Fix centering on small devices

--- a/source/stylesheets/_grid.sass
+++ b/source/stylesheets/_grid.sass
@@ -14,15 +14,8 @@ body
   flex-direction: column
 
   .outer-wrapper
-    flex: 1
-
-    @media screen and #{$media-tablet-up}
-      margin: 0 auto 0
-      max-width: 768px
-      display: flex
-      flex-direction: column
-      align-items: safe center
-      justify-content: center
+    margin: auto
+    max-width: 768px
 
     .inner-wrapper
       min-height: min-content
